--- a/Html/Menu.html
+++ b/Html/Menu.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Menu</title>
+    <link rel="stylesheet" href="/Css/Style.css">
 </head>
 <body>
-    
+    <header class="menu">
+<ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+    <li><a href="#">Privacy</a></li>
+</ul>
+
+
+    </header>
+
+
+
 </body>
 </html>
